# Jahpodi-Aomossar

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
html/: cadastro.html  login.html
migrations/2024-06-18-173428_create_database/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: answer.rs  ingredient.rs  ingredient_for_recipes.rs  ingredient_request.rs  mod.rs  question.rs  rating.rs  recipe.rs  user.rs
src/routes/: answer.rs  home.rs  ingredient.rs  ingredient_request.rs  mod.rs  protected_routes.rs  question.rs  recipe.rs  user.rs
static/: home.html  home_user.html  ingredient.html  login.html  pagina_inicial.html  post_recipe.html  recipe.html  recipes.html  register.html
